[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octoverse"
version = "0.1.0"
dependencies = [
    "opencv-python-headless>=4.8.0",
    "ultralytics>=8.0.0",
    "pyttsx3>=2.90",
    "numpy>=1.21.0",
    "streamlit>=1.28.0",
    "Pillow>=9.0.0",
    "streamlit-webrtc>=0.47.0",
    "av>=10.0.0",
    "tornado>=6.2",
    "pydantic>=1.10.0",
    "aiohttp>=3.8.0",
]

[tool.pip]
no-binary = ["opencv-python"]
